# Martydepth

./: .gitignore  README.md  ReaLChords.md  ReaLJam.md  analyze_silences_and_holds.py  calculate_test_set_baselines.py  debug_temporal_evaluation.py  examine_preprocessed_data.py  pyproject.toml  requirements.txt  setup.py  test_evaluation_fix.py  wandb_api_key.txt
analysis_output/: chord_distribution_analysis_train.json
data/: README.md
docs/: chord_analysis.json  chord_interval_representation.md  comprehensive_eda_analysis.md  data_analysis_truncated.md  evaluation_system_fixes.md  misc_changes.md  post_fix_eda_analysis.md  preprocessing_fix_summary.md  temporal_evaluation_guide.md  temporal_evaluation_methodology.md
notebooks/: analyze_processed_data.ipynb  analyze_raw_data.ipynb  dataset.ipynb  evaluate_models.ipynb  temporal_evaluation.ipynb  train_balanced_model.ipynb  train_contrastive_model.ipynb  train_discriminative_model.ipynb  train_offline_model.ipynb  train_online_model.ipynb
src/config/: __init__.py  tokenization_config.py
src/data/: analyze_token_distribution.py  dataset.py  datastructures.py  explore_data.py  preprocess_chords.py  preprocess_frames.py
src/evaluation/: aggregate_results.py  evaluate.py  evaluate_offline.py  harmony_analysis_results.md  metrics.py  quick_embedding_viz.py  run_evaluation.py  run_offline_evaluation.py  run_temporal_evaluation.py  temporal_evaluation.py  training_diagnostics.py  visualize_attention.py  visualize_embeddings.py  visualize_model.py
src/models/: contrastive_reward_model.py  offline_teacher.py  (+3 more)
(+27011 files in other folders)
