[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "martydepth"
version = "0.1.0"
description = "Online chord prediction from melody using transformers"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.1",
    "numpy>=1.24.3",
    "wandb>=0.15.12",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
] 